tests/paczka1/fuzzy1/10087695.err
Error in line 2: QAND8m S928 50,3
Error in line 7: QAND8m S272 99,8
Error in line 15: i9l9g6rG0 A461 41,2
Error in line 34: pZfuC812K A461 98,6
Error in line 31: S272 S928 71,5
Error in line 35: pZfuC812K S131 0,2
